      if the old format is around. The new format allows us to store
      annotations along with descriptors.
    - Use annotations to record the time we received each descriptor.
    - Use annotations to record the source for each descriptor.
    - Use annotations to record the purpose of each descriptor.
    - Disable the SETROUTERPURPOSE controller command: it is now
      obsolete.
    - Bridge authorities now write bridge descriptors to disk, meaning
      we can export them to other programs and begin distributing them
      to blocked users.

  o Major features (directory authorities):
    - When a v3 authority is missing votes or signatures, it now tries
      to fetch them.
    - Directory authorities track weighted fractional uptime as well as
      weighted mean-time-between failures.  WFU is suitable for deciding
      whether a node is "usually up", while MTBF is suitable for deciding
      whether a node is "likely to stay up."  We need both, because
      "usually up" is a good requirement for guards, while "likely to
      stay up" is a good requirement for long-lived connections.

  o Major features (v3 directory system):
    - Caches now download v3 network status documents as needed.
    - Caches now download descriptors listed in their v3 network status
      documents.
    - All hosts now attempt to download and keep fresh v3 authority
      certificates, and re-attempt after failures.
    - More internal-consistency checks for vote parsing.

  o Major bugfixes (performance):
    - Fix really bad O(n^2) performance when parsing a long list of
      routers: Instead of searching the entire list for an "extra-info "
      string which usually wasn't there, once for every routerinfo
      we read, just scan lines forward until we find one we like.
      Bugfix on 0.2.0.1.
    - When we add data to a write buffer in response to the data on that
      write buffer getting low because of a flush, do not consider the newly